tests/neg/15981.check
-- Error: tests/neg/15981.scala:4:45 -----------------------------------------------------------------------------------
4 |    override def equals(any: Any): Boolean = any.isInstanceOf[PosInt] // error
  |                                             ^^^
  |                                  the type test for PosInt cannot be checked at runtime because it's a local class
